--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@opennextjs/cloudflare": "^1.12.0",
-    "wrangler": "^3.114.15", // <-- 이 부분을 다시 추가해 줘!
+    "wrangler": "^3.114.15",
     "@eslint/js": "^9.38.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
