--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@opennextjs/cloudflare": "^1.12.0",
-    "wrangler": "^4.47.0"
+    "wrangler": "^4.47.0",
     "@eslint/js": "^9.38.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
